--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "homepage": "https://madhurxg.github.io/textutils-dev"
+    "homepage": "https://madhurxg.github.io/testutils-dev"
   },
   "scripts": {
     "start": "react-scripts start",
